# Assignment4-End-to-End-Reseach-Tool

./: .dockerignore  .gitignore  Architecture_diagram.py  README.md  docker-compose.yml  pyproject.toml
Tests/: 1. pdf_extraction.py  11. document_selection_agent.py  12.arxiv_agent.py  2. snowflake_setup.py  21.google_doc.py  22.google_doc_1.py  3. snowflake_load.py  4. dockling_parsing.py  5.  snowflake_s3_dockling_pinecone.py  6. backup_dag.py  docker-compose.yml
Tests/research_canvas/: agent.py  chat.py  download.py  model.py  rag_node.py  search.py
agent/research_canvas/: agent.py  chat.py  delete.py  demo.py  document_selection.py  export_router.py  rag.py  search.py
airflow_docker_pipelines/: Dockerfile  README.md  docker-compose.yaml
airflow_docker_pipelines/dags/: pdf_processing_pipeline_dag.py  scrape_cfa_publications_dag.py  snowflake_load_dag.py  snowflake_setup_dag.py
backend/: .dockerignore  Dockerfile  README.md  credentials.json  pyproject.toml
backend/research_canvas/: agent.py  arxiv_search.py  chat.py  demo.py  download.py  model.py  search.py  state.py
research_canvas/: state.py  test_langraph.py
ui/: .dockerignore  Dockerfile  README.md  next.config.mjs  package.json  pnpm-lock.yaml
ui/src/app/api/copilotkit/: route.ts
ui/src/app/api/export/codelabs/: route.ts
ui/src/app/api/export/pdf/: route.ts
ui/src/components/: ResearchCanvas.tsx
