[tool.poetry]
name = "end-to-end-research-assistant"
version = "0.1.0"
description = ""
authors = ["dharun-karthick-ramaraj <dharun.ramaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
boto3 = "^1.35.57"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.26.1"
python-dotenv = "^1.0.1"
snowflake-connector-python = "^3.12.3"
docling = "^2.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
