[tool.poetry]
name = "end-to-end-research-assistant"
version = "0.1.0"
description = ""
authors = ["dharun-karthick-ramaraj <dharun.ramaraj@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
boto3 = "^1.35.57"
pandas = "^2.2.3"
requests = "^2.32.3"
beautifulsoup4 = "^4.12.3"
selenium = "^4.26.1"
python-dotenv = "^1.0.1"
snowflake-connector-python = "^3.12.3"
docling = "^2.4.2"
pinecone-client = "^5.0.1"
langchain-nvidia-ai-endpoints = "^0.3.5"
langchain-pinecone = "^0.2.0"
langgraph = "^0.2.45"
copilotkit = "^0.1.27"
langchain-core = "^0.3.15"
langchain-openai = "^0.2.6"
langchain-community = "^0.3.5"
langchain-anthropic = "^0.2.4"
langchain-google-genai = "^2.0.4"
langchain = "^0.3.7"
openai = "^1.54.3"
tavily-python = "^0.5.0"
uvicorn = "^0.32.0"
html2text = "^2024.2.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
